# targeting_flags

./: CHANGELOG.rst  MANIFEST.in  README.md  setup.cfg
python/sdss_targeting_flags/: __init__.py  read.py
python/sdss_targeting_flags/flags/: sdss5_target_2_with_groups.csv  sdss5_target_with_groups.csv
