[metadata]
name = sdss-targeting_flags
version = 1
author = Sean Morrison
author_email = smorris0@illinois.edu
description = Maintains the SDSS targeting flags for the sdss_semaphore package
url = https://github.com/Sean-Morrison/SDSS_targeting_flags
project_urls =
    Repository = https://github.com/Sean-Morrison/targeting_flags
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
include_package_data = True
package_dir =
    = python
install_requires =
    sdsstools>=0.4.0
scripts =
    bin/SDSS_targeting_flags_version

[options.packages.find]
where =
    python

[options.package_data]
sdss_targeting_flags =
    flags/*
